--- a/src/Navigation/Nav.css
+++ b/src/Navigation/Nav.css
@@ -1,6 +1,6 @@
 .nav{
     position: relative;
-    border-bottom: 2px solid cornflowerblue;
+    box-shadow:0px 1px 4px 0px gray ;
     height: 10vh;
     display: flex;
     align-items: center;
