--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 20%;
     padding: 0 30px;
+    box-shadow:1px 0px 4px 0px gray ;
     background-color: cornflowerblue;
 }
 h2{
